[gd_scene load_steps=7 format=3 uid="uid://ciaij7yfqjpui"]

[ext_resource type="Script" uid="uid://ip8rdgqavrtd" path="res://scenes/scene_handler.gd" id="1_4ys0r"]
[ext_resource type="PackedScene" uid="uid://c4snmw7euut7v" path="res://scenes/awake/awake_scene.tscn" id="2_tx7b0"]
[ext_resource type="PackedScene" uid="uid://bdgg64gsfnru" path="res://scenes/asleep/asleep_scene.tscn" id="3_row4k"]

[sub_resource type="Animation" id="Animation_row4k"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%TransitionColor:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_tx7b0"]
resource_name = "fade_in_out"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%TransitionColor:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.2, 0, 0.2, 0, 1, -0.3, 0, 0.3, 0, 1, -0.3, 0, 0.25, 0, 0, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0, 0.466667, 0.533333, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y1f18"]
_data = {
&"RESET": SubResource("Animation_row4k"),
&"fade_in_out": SubResource("Animation_tx7b0")
}

[node name="SceneHandler" type="Node3D"]
script = ExtResource("1_4ys0r")
awake_scene = ExtResource("2_tx7b0")
asleep_scene = ExtResource("3_row4k")

[node name="Transition" type="CanvasLayer" parent="."]

[node name="TransitionHalfTimer" type="Timer" parent="Transition"]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="TransitionCooldown" type="Timer" parent="Transition"]
unique_name_in_owner = true
one_shot = true

[node name="TransitionColor" type="ColorRect" parent="Transition"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="TransitionAnimation" type="AnimationPlayer" parent="Transition"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_y1f18")
}

[node name="CurrentSceneParent" type="Node3D" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="Transition/TransitionHalfTimer" to="." method="_add_scene_node"]
[connection signal="timeout" from="Transition/TransitionCooldown" to="." method="_on_transition_cooldown_timeout"]
